objects/tqay_Exam_Question_Response__c.object
<CustomObject>
    <fields>
        <fullName>Exam_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exam Question</label>
        <referenceTo>tqay_Exam_Question__c</referenceTo>
        <relationshipLabel>Exam Question Responses</relationshipLabel>
        <relationshipName>Exam_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exam_Response__c</fullName>
        <label>Exam Response</label>
        <referenceTo>tqay_Exam_Response__c</referenceTo>
        <relationshipLabel>Exam Question Responses</relationshipLabel>
        <relationshipName>Exam_Question_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>tqay_Question__c</referenceTo>
        <relationshipLabel>Exam Question Responses</relationshipLabel>
        <relationshipName>Exam_Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Exam Question Response</label>
    <nameField>
        <displayFormat>EQR-{0000}</displayFormat>
        <label>Exam Question Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>